2020-01-09      Gaius Mulley <gaius.mulley@southwales.ac.uk>

	* m2/Make-lang.in:  (mc) add RTintdummy.o as a dependant
	  and link with RTintdummy.o.
	* m2/mc-boot/GDynamicStrings.c:  regenerated.
	* m2/mc-boot/GFIO.c:  regenerated.
	* m2/mc-boot/GIO.c:  regenerated.
	* m2/mc-boot/GM2RTS.c:  regenerated.
	* m2/mc-boot/GRTExceptions.c:  regenerated.
	* m2/mc-boot/Gdecl.c:  regenerated.
	* m2/mc-boot/Gkeyc.c:  regenerated.
	* m2/mc-boot/Gkeyc.h:  regenerated.
	* m2/mc/decl.mod:  (checkInstrinsic) check whether throw is
          called.  (checkCHeaders) New procedure.  (makeFuncCall)
	  call checkCHeaders.
	* m2/mc/keyc.def:  (useUnistd) New procedure.  (useThrow) New
	  procedure.
	* m2/mc/keyc.mod:  (seenUnistd) New boolean.  (seenThrow) New
	  boolean.  (useThrow) New procedure.  (checkThrow) New
          procedure.  (useUnistd) New procedure.  (checkUnistd) New
          procedure.  (genDefs) call checkUnistd, checkThrow.
	  (init) initialize seenUnistd, seenThrow.
	* m2/tools-src/mklink.c:  added unistd.h include.
          (main) added a issing return type.
	* m2/mc/keyc.mod:  (checkThrow) use system header file for throw.
	* m2/mc-boot/Gkeyc.c:  regenerated.
	* m2/mc-boot/GAssertion.c:  regenerated.
	* m2/mc-boot/GDebug.c:  regenerated.
	* m2/mc-boot/GDynamicStrings.c:  regenerated.
	* m2/mc-boot/GFIO.c:  regenerated.
	* m2/mc-boot/GFormatStrings.c:  regenerated.
	* m2/mc-boot/GIndexing.c:  regenerated.
	* m2/mc-boot/GM2RTS.c:  regenerated.
	* m2/mc-boot/GNumberIO.c:  regenerated.
	* m2/mc-boot/GRTExceptions.c:  regenerated.
	* m2/mc-boot/GStdIO.c:  regenerated.
	* m2/mc-boot/GStringConvert.c:  regenerated.
	* m2/mc-boot/Gdecl.c:  regenerated.
	* m2/mc-boot/Gkeyc.c:  regenerated.
	* m2/mc-boot/GmcError.c:  regenerated.
	* m2/mc-boot/GmcLexBuf.c:  regenerated.
	* m2/mc-boot/GmcPreprocess.c:  regenerated.
	* m2/mc-boot/GmcPrintf.c:  regenerated.
	* m2/mc-boot/GmcStack.c:  regenerated.
	* m2/mc-boot/GmcStream.c:  regenerated.